--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-native": "0.63.2",
