--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "metro-config": "^0.61.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "16.13.1",
@@ -34,6 +35,7 @@
     "react-native-smart-tip": "^2.0.1",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-svg": "^9.13.6",
+    "react-native-svg-transformer": "^0.14.3",
     "react-navigation": "^3.0.9",
     "react-navigation-redux-helpers": "^2.0.9",
     "react-redux": "^7.2.1",
