--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-svg": "^9.13.6",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-webview": "^10.3.3",
     "react-navigation": "^3.0.9",
     "react-navigation-redux-helpers": "^2.0.9",
