--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^2.0.0-beta.2",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-smart-tip": "^2.0.1",
+    "react-native-spinkit": "^1.5.0",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-svg": "^9.13.6",
     "react-native-svg-transformer": "^0.14.3",
