--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-qrcode-svg": "^6.0.1",
     "react-native-ratings": "^6.5.0",
     "react-native-render-html": "^4.2.0",
+    "react-native-root-siblings": "^4.0.6",
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-safe-area-view": "^1.0.0",
